--- a/src/app/views/appviews/login.template.html
+++ b/src/app/views/appviews/login.template.html
@@ -1,25 +1,31 @@
 <div class="middle-box text-center loginscreen  animated fadeInDown">
+  <h2>Welcome to Franchise Manager</h2>
+  <div style="display: flex; align-items: center;">
     <div>
-        <div>
-            <h1 class="logo-name">Franchise Manager</h1>
-        </div>
-        <h3>Welcome to Franchise Manager</h3>
-        <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
-        </p>
-        <p>Login in. To see it in action.</p>
-        <form class="m-t" role="form" action="#">
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Username" required="">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" required="">
-            </div>
-            <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
-
-            <a href="#"><small>Forgot password?</small></a>
-            <p class="text-muted text-center"><small>Do not have an account?</small></p>
-            <a class="btn btn-sm btn-white btn-block" href="#">Create an account</a>
-        </form>
-        <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+      <img src="assets/images/login.png" alt="">
     </div>
+    <div class="al-form">
+      <form class="m-t" role="form" action="#">
+        <div class="form-group">
+          <input type="email" class="form-control" placeholder="Username" required="">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" placeholder="Password" required="">
+        </div>
+        <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
+
+        <a href="#">
+          <small>Forgot password?</small>
+        </a>
+      </form>
+      <p class="text-muted text-center">
+        <small>If you are franchise owner and do not have an account, click the "SignUp"
+          <br/> button below to get started.</small>
+      </p>
+      <a class="btn btn-sm btn-block btn-danger" href="#">Sign up</a>
+    </div>
+  </div>
+  <p class="m-t al-foo">
+    <small>Copyright Critical Hosting, Inc. &copy; 2018</small>
+  </p>
 </div>
