--- a/src/app/views/appviews/login.template.html
+++ b/src/app/views/appviews/login.template.html
@@ -12,8 +12,9 @@
         <div class="form-group">
           <input type="password" class="form-control" placeholder="Password" required="">
         </div>
-        <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
-
+        <a routerLink='/starterview'>
+          <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
+        </a>
         <a href="#">
           <small>Forgot password?</small>
         </a>
